Make Tool execute private

--- a/examples/RAGAS.ipynb
+++ b/examples/RAGAS.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "        self._embedder = sentence_transformers.SentenceTransformer(embedder_model)\n",
     "\n",
-    "    def execute(self, query: Dict[str, str] | None, context: str | None) -> Dict[str, str | List[str] | Dict[str, tp.tool.TextLike]]:\n",
+    "    def _execute(self, query: Dict[str, str] | None, context: str | None) -> Dict[str, str | List[str] | Dict[str, tp.tool.TextLike]]:\n",
     "        '''\n",
     "        Calculates the similarity between one question and a list of questions.\n",
     "\n",
@@ -254,7 +254,7 @@
     "        self._question_generator = question_generator\n",
     "        self._question_comparator = question_comparator\n",
     "    \n",
-    "    def execute(self, query: Dict[str, str], context: str=None) -> Tuple[Dict[str, str], Dict[str,str]]:\n",
+    "    def _execute(self, query: Dict[str, str], context: str=None) -> Tuple[Dict[str, str], Dict[str,str]]:\n",
     "        '''\n",
     "        Evaluates the relevance of a answer.\n",
     "\n",
