--- a/examples/RAGAS.ipynb
+++ b/examples/RAGAS.ipynb
@@ -92,6 +92,8 @@
     "\n",
     "    _return_description = {\"questions\":\"generated questions from the answer\"}\n",
     "\n",
+    "    _input_description = {\"answer\" : \"answer to generate questions from\"}\n",
+    "\n",
     "    def __init__(self):\n",
     "        '''\n",
     "        QuestionGenerator constructor.\n",
@@ -101,7 +103,7 @@
     "            api_key (str, optional): Groq API key to use, if None will check the environment 'GROQ_API_KEY' variable. Default is None.\n",
     "        '''\n",
     "\n",
-    "        super().__init__(self._description, self._base_prompt, \n",
+    "        super().__init__(self._description, self._input_description, self._base_prompt, \n",
     "                         self._return_description, QuestionGenerator._system_message, \n",
     "                         json_mode=True)"
    ]
@@ -125,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "{'questions': ['Who was Zeus in Greek mythology?',\n",
-       "  'What was the role of Jupiter in Roman mythology?',\n",
-       "  'In Norse mythology, who was the father ofThor?']}"
+       "{'questions': ['Who is the Norse god of thunder and lightning?',\n",
+       "  'What is another name for Thor in Norse mythology?',\n",
+       "  'Which god is known for his powerful hammer Mjolnir?']}"
       ]
      },
      "execution_count": 7,
@@ -155,6 +157,7 @@
     "\n",
     "    _return_description = {\"score\":\"similarity score between the query question and the questions to compare\"}\n",
     "\n",
+    "    _input_description = {\"query_question\" : \"question to compare\", \"questions\":\"questions to compare with query\"}\n",
     "\n",
     "    def __init__(self, embedder_model:str=\"all-MiniLM-L6-v2\") -> None:\n",
     "        '''\n",
@@ -163,7 +166,7 @@
     "        Args:\n",
     "            embedder_model (str, optional): model to generate embeddings. Defaults to \"all-MiniLM-L6-v2\".\n",
     "        '''\n",
-    "        super().__init__(self._description)\n",
+    "        super().__init__(self._description, self._input_description)\n",
     "\n",
     "        self._embedder = sentence_transformers.SentenceTransformer(embedder_model)\n",
     "\n",
@@ -204,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "{'score': '0.598118782043457'}"
+       "{'score': '0.36828287442525226'}"
       ]
      },
      "execution_count": 9,
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,6 +239,8 @@
     "\n",
     "    _return_description = {\"score\": \"relevance of the answer considering the question\"}\n",
     "\n",
+    "    _input_description = {\"answer\" : \"answer to evaluate the relevance\"}\n",
+    "\n",
     "    def __init__(self, question_generator:QuestionGenerator=None, question_comparator:QuestionComparator=None) -> None:\n",
     "        '''\n",
     "        AnswerRelevanceEvaluator constructor\n",
@@ -244,7 +249,7 @@
     "            question_generator (QuestionGenerator, optional): generator to use, if None creates a new with default arguments. Defaults to None.\n",
     "            question_comparator (QuestionComparator, optional): comparator to use, if None creates a new with default arguments. Defaults to None.\n",
     "        '''\n",
-    "        super().__init__(self._description)\n",
+    "        super().__init__(self._description, self._input_description)\n",
     "\n",
     "        if question_generator is None:\n",
     "            question_generator = QuestionGenerator()\n",
@@ -282,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,17 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({'score': '0.5891451835632324'},\n",
+       "({'score': '0.3750876486301422'},\n",
        " {'score': 'relevance of the answer considering the question'})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,6 +314,13 @@
    "source": [
     "answer_relevance_evaluator(rag_sample)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
