--- a/examples/RAGAS.ipynb
+++ b/examples/RAGAS.ipynb
@@ -64,7 +64,12 @@
     "rag_sample = {'answer': 'sky and thunder god',\n",
     "            'question': 'What is Zeus know for in Greek mythology?',\n",
     "            'context': 'Palici: he Palici the sons of Zeus\\nPalici: in Greek mythology\\nZeus: Zeus (British English , North American English ; , Zeús ) is the sky and thunder god in ancient Greek religion\\n',\n",
-    "            'context_sentence_count': '3'}"
+    "            'context_sentence_count': '3'}\n",
+    "\n",
+    "rag_sample_description = {\"answer\":\"answer to the question\", \n",
+    "                          \"question\":\"question beeing answered\", \n",
+    "                          \"context\":\"context used to answer the question\", \n",
+    "                          \"context_sentence_count\": \"number of sentences in the context\"}"
    ]
   },
   {
@@ -104,7 +109,7 @@
     "        '''\n",
     "\n",
     "        super().__init__(self._description, self._input_description, self._base_prompt, \n",
-    "                         self._return_description, QuestionGenerator._system_message, \n",
+    "                         self._return_description, QuestionGenerator._system_message, None,\n",
     "                         json_mode=True)"
    ]
   },
@@ -116,7 +121,7 @@
    "source": [
     "question_generator = QuestionGenerator()\n",
     "\n",
-    "questions, _ = question_generator(rag_sample)"
+    "questions, generation_return_description = question_generator(rag_sample)"
    ]
   },
   {
@@ -127,9 +132,11 @@
     {
      "data": {
       "text/plain": [
-       "{'questions': ['Who is the Norse god of thunder and lightning?',\n",
-       "  'What is another name for Thor in Norse mythology?',\n",
-       "  'Which god is known for his powerful hammer Mjolnir?']}"
+       "{'questions': ['Which god is associated with the weather in Norse mythology?',\n",
+       "  'Who is the Norse god of the sky and thunder?',\n",
+       "  'What is the name of the Norse god often depicted with a hammer and controlling the weather?',\n",
+       "  'Which Norse god is known for his ability to control the weather and is often associated with thunderstorms?',\n",
+       "  'In Norse mythology, what is the name of the god who can control the weather and is often depicted carrying a hammer?']}"
       ]
      },
      "execution_count": 7,
@@ -153,11 +160,11 @@
     "\n",
     "    '''\n",
     "\n",
-    "    _description = \"Comparate questions, returning the similarity between a query questions and questions to compare.\"\n",
+    "    _description = \"Comparate questions, returning the similarity between a single query question and questions to compare.\"\n",
     "\n",
     "    _return_description = {\"score\":\"similarity score between the query question and the questions to compare\"}\n",
     "\n",
-    "    _input_description = {\"query_question\" : \"question to compare\", \"questions\":\"questions to compare with query\"}\n",
+    "    _input_description = {\"query_question\" : \"single question to compare\", \"questions\":\"questions to compare with query\"}\n",
     "\n",
     "    def __init__(self, embedder_model:str=\"all-MiniLM-L6-v2\") -> None:\n",
     "        '''\n",
@@ -207,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "{'score': '0.36828287442525226'}"
+       "{'score': '0.3964371204376221'}"
       ]
      },
      "execution_count": 9,
@@ -226,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,23 +303,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "({'score': '0.3750876486301422'},\n",
+       "({'score': '0.5079158147176107'},\n",
        " {'score': 'relevance of the answer considering the question'})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "answer_relevance_evaluator(rag_sample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adapter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adapter = tp.tool.Adapter()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_query, next_context = adapter.map_tools(previous_tool=question_generator, \n",
+    "                                             previous_output=questions, \n",
+    "                                             previous_output_description=generation_return_description, \n",
+    "                                             next_tool=question_comparator, \n",
+    "                                             additional_inputs=rag_sample, \n",
+    "                                             additional_inputs_description=rag_sample_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparator_result, _ = question_comparator(next_query, next_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score': '0.3964371204376221'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comparator_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = tp.Pipeline([question_generator, question_comparator], global_memory=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result, result_description = pipeline(rag_sample, rag_sample_description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'score': '0.45767029126485187'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   },
   {
